<resources>
    <string name="app_name">chapter03</string>
    <string name="hello_string1">hello world</string>
    <string name="hello_string2">hallo  welt</string>


    <!-- Project Calculator-->
    <string name="calc_name">Simple Calculator</string>
    <string name="deafult_show">0</string>
    <string name="cancel">CE</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="clear">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">＋</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">－</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="reciprocal">1/x</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">＝</string>




</resources>